<resources>
    <string name="hint_staging_block">Staging block</string>
    <string name="hint_destination_block">Destination block</string>
    <string name="hint_value_decimal">Value (32 bit integer)</string>
    <string name="hint_address_hex">Address (in hexadecimal)</string>
    <string name="btn_execute_transfer_restore">Execute transfer restore</string>
    <string name="app_name">MIFARE Classic Tool</string>
    <string name="app_version">App Version</string>
    <string name="title_activity_main">MIFARE Classic Tool</string>
    <string name="title_activity_read_tag">Read Tag</string>
    <string name="title_activity_dump_editor">Dump Editor</string>
    <string name="title_activity_access_conditions">Access Conditions</string>
    <string name="title_activity_write_tag">Write Tag</string>
    <string name="title_activity_create_key_map">Map Keys to Sectors</string>
    <string name="title_activity_file_chooser">File Chooser</string>
    <string name="title_activity_value_blocks">Value Blocks as Integers</string>
    <string name="title_activity_key_editor">Key Editor</string>
    <string name="title_activity_help">Help and Info</string>
    <string name="title_activity_hex_to_ascii">Data as ASCII</string>
    <string name="title_activity_tag_info">Tag Info</string>
    <string name="title_activity_value_block_tool">Value Block Decoder
        &amp; Encoder</string>
    <string name="title_activity_access_condition_tool">Access Condition
        Decoder &amp; Encode</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_diff_tool">Diff Tool</string>
    <string name="title_activity_bcc_tool">BCC Calculator</string>
    <string name="title_activity_clone_uid">Clone UID to Magic Tag (2nd gen)</string>
    <string name="title_activity_import_export_tool">Import/Export Tool</string>
    <string name="title_activity_uid_log_tool">UID Log</string>
    <string name="title_activity_data_conversion_tool">Data Conversion Tool</string>
    <string name="text_choose_key_files">Choose some key file(s):</string>
    <string name="text_wait_read_tag">Reading tag&#8230;\n(Don\'t remove tag)</string>
    <string name="text_key_map_progress">Key Mapping Progress:</string>
    <string name="text_sector">Sector</string>
    <string name="text_block">Block</string>
    <string name="text_caption_title">Caption</string>
    <string name="text_keya">KeyA</string>
    <string name="text_keyb">KeyB</string>
    <string name="text_ac">ACs</string>
    <string name="text_uid">UID</string>
    <string name="text_uid_and_manuf">UID &amp; ManufInfo</string>
    <string name="text_valueblock">ValueBlock</string>
    <string name="text_chooser_info_text">Choose a file:</string>
    <string name="text_open_dump_title">Open Tag Dump</string>
    <string name="text_no_files_in_chooser">No files found</string>
    <string name="text_ac_read">Read:</string>
    <string name="text_ac_write">Write:</string>
    <string name="text_ac_incr">Incr.:</string>
    <string name="text_ac_decr">Decr./Trans./Rest.:</string>
    <string name="text_ac_pos">Location:</string>
    <string name="text_ac_error">Error: This configuration
        is not known</string>
    <string name="text_vb_location">Location:</string>
    <string name="text_vb_value">Value:</string>
    <string name="text_vb_orig">Original:</string>
    <string name="text_vb_as_int_decoded">As Integer:</string>
    <string name="text_sector_range">Create Map for Sectors:</string>
    <string name="text_sector_range_all">All</string>
    <string name="text_update_colors">Update Colors</string>
    <string name="text_data">Data</string>
    <string name="text_value">Value</string>
    <string name="text_write_dump_info">Write a dump (or some sectors of it) to
        a tag. Blocks containing unknown data (---) will be skipped!</string>
    <string name="text_factory_format_info">Try to format the tag to
        factory/delivery state.</string>
    <string name="text_incr_decr_value_block_info">Increment or decrement
        and than transfer a Value Block. (If you don\'t know what Value Blocks are,
        check out \"Help and Info\".) </string>
    <string name="text_starting_at_0">(Starting at 0)</string>
    <string name="text_open_key_file_title">Open or Create a Key File</string>
    <string name="text_choose_dump_to_write">Choose the dump to be written:</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_key_a">Key A</string>
    <string name="text_key_b">Key B</string>
    <string name="text_key_ab">Key A|B</string>
    <string name="text_never">Never</string>
    <string name="text_keys_not_known">Keys (A and B) not known</string>
    <string name="text_block_read_only">Block is read-only</string>
    <string name="text_write_key_a_not_known">Key with write access (A)
        not known</string>
    <string name="text_write_key_b_not_known">Key with write access (B)
        not known</string>
    <string name="text_ac_read_only">Access Conditions are read-only</string>
    <string name="text_keys_read_only">Keys (A and B) are read-only</string>
    <string name="text_invalid_ac_or_sector_dead">Invalid Access Conditions or
        dead sector :(</string>
    <string name="text_strange_error">Some strange error occurred :(</string>
    <string name="text_no_mfc_support_device">This device does not
        support MIFARE Classic!</string>
    <string name="text_no_mfc_support_tag">Not a MIFARE Classic tag!</string>
    <string name="text_no_tag">There is no MIFARE Classic tag.</string>
    <string name="text_generic_info">Generic Info</string>
    <string name="text_mf_info">MIFARE Classic Info</string>
    <string name="text_rf_tech">RF Technology</string>
    <string name="text_rf_tech_14a">ISO/IEC 14443, Type A</string>
    <string name="text_atqa">ATQA</string>
    <string name="text_sak">SAK</string>
    <string name="text_ats">ATS</string>
    <string name="text_tag_type_and_manuf">Tag Type and Manufacturer</string>
    <string name="text_tag_type_guess">\"Tag Type and Manufacturer\" might be
        wrong.\nSee \"Help and Info\" for more information.</string>
    <string name="text_mem_size">Memory Size</string>
    <string name="text_block_size">Block Size</string>
    <string name="text_sector_count">Number of Sectors</string>
    <string name="text_block_count">Number of Blocks</string>
    <string name="text_vb">VB</string>
    <string name="text_vb_as_int">VB as Int</string>
    <string name="text_addr">Addr</string>
    <string name="text_copy">Copy</string>
    <string name="text_paste">Paste</string>
    <string name="text_option_info">Info to option</string>
    <string name="text_static_ac_default">08778F</string>
    <string name="text_no_key_io_error">No keys found (or dead sector)</string>
    <string name="text_ac_label">ACs</string>
    <string name="text_block_0">Block 0 (0-4):</string>
    <string name="text_block_1">Block 1 (5-9):</string>
    <string name="text_block_2">Block 2 (10-14):</string>
    <string name="text_block_3">Block 3 (15) - Sector Trailer:</string>
    <string name="text_step_1_sector_trailer">Step 1:
        Choose ACs for Sector Trailer</string>
    <string name="text_step_2_data_blocks">Step 2:
        Choose ACs for Data Blocks</string>
    <string name="text_dump_1">Dump 1 (A)</string>
    <string name="text_dump_2">Dump 2 (B)</string>
    <string name="text_a">A:</string>
    <string name="text_b">B:</string>
    <string name="text_dump_from_editor">Dump from Editor</string>
    <string name="text_incr_decr_value_block">Incr./Decr. Value Block</string>
    <string name="text_increment">Increment</string>
    <string name="text_decrement">Decrement</string>
    <string name="text_invalid_data">--Invalid Data--</string>
    <string name="text_only_in_dump1">Sector occurs only in dump 1 (A)</string>
    <string name="text_only_in_dump2">Sector occurs only in dump 2 (B)</string>
    <string name="text_uid_part">UID (part)</string>
    <string name="text_bcc">BCC</string>
    <string name="text_clone_uid_info">This tool can clone the UID of a tag to a
        \"magic tag\" (2nd gen, Android compatible, direct write,
        block 0 writable). Hit the info button to get more information.</string>
    <string name="text_uid_to_clone">UID to clone</string>
    <string name="text_clone_uid_manufacturer_block_rest">The rest of block 0</string>
    <string name="text_write_key">The key to write block 0</string>
    <string name="text_status_log">Status Log</string>
    <string name="text_use_uid_of_scanned_tag">Use UID of scanned tag</string>
    <string name="text_block_0_generated">Block 0 generated</string>
    <string name="text_data_to_write">Data to write:</string>
    <string name="text_waiting_for_magic_tag">Waiting for magic tag (2nd gen)</string>
    <string name="text_writing_block_0">Writing block 0</string>
    <string name="text_no_errors_on_write">No errors during write process</string>
    <string name="text_rescan_tag_to_check">Rescan clone to validate success</string>
    <string name="text_checking_clone">Checking clone</string>
    <string name="text_clone_successfully">Successfully cloned UID</string>
    <string name="text_uid_match_error">UIDs did not match</string>
    <string name="text_clone_error">Error: Are you sure you have a magic
        tag (2nd gen)?</string>
    <string name="text_uid_length_error">Error: UID length mismatch (4 vs. 7 vs. 10 bytes)</string>
    <string name="text_block0_warning">Warning: Block 0 may contain invalid data (BCC/SAK/ATQA/UID0)</string>
    <string name="text_sak_atqa_calc_warning">Warning: Could not calculate SAK/ATQA, using default</string>
    <string name="text_reset_clone_process">Resetting the clone process</string>
    <string name="text_select_file">Select file</string>
    <string name="text_choose_dump_file">Choose dump file</string>
    <string name="text_choose_key_file">Choose key file</string>
    <string name="text_import_export_tool_info">If a file with the same name already
        exist upon import, it will be overwritten.</string>
    <string name="text_random_uid">Random UID</string>
    <string name="text_no_uid_logs">The UID log is empty</string>
    <string name="text_not_ascii">Not ASCII</string>
    <string name="text_convert">Convert</string>
    <string name="text_ascii">ASCII</string>
    <string name="text_hex">Hex</string>
    <string name="text_bin">Bin</string>
    <string name="text_dec_be">Dec (BE)</string>
    <string name="text_dec_le">Dec (LE)</string>
    <string name="text_invalid_ac">Access Conditions are invalid</string>
    <string name="action_read_tag">Read Tag</string>
    <string name="action_write_tag">Write Tag</string>
    <string name="action_edit_tag_dump">Edit/Analyze Dump File</string>
    <string name="action_edit_key_dump">Edit/Add Key File</string>
    <string name="action_tools">Tools</string>
    <string name="action_create_key_map">Map Keys to Sectors</string>
    <string name="action_help">Help and Info</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change">Change</string>
    <string name="action_write_full_dump">Select Dump</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="action_decode">Decode</string>
    <string name="action_encode">Encode</string>
    <string name="action_write_mfid">Advanced: Enable writing to
        manufacturer block</string>
    <string name="action_show_options">Show Options</string>
    <string name="action_static_ac">Use these Access Conditions for all
        sectors:</string>
    <string name="hint_hex_16_byte">HEX, 16 bytes (e.g. 0A4F&#8230;)</string>
    <string name="hint_hex_00">00</string>
    <string name="hint_int_423">e.g. 423</string>
</resources>