<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2013 Gerhard Klostermeier
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutValueBlockTool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.ValueBlockTool" >

    <!-- Dummy to prevent EditTexts from getting focus on Activity startup -->
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/linearLayoutValueBlockToolVB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textViewValueBlockToolVB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/text_vb"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextValueBlockToolVB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_hex_16_byte"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="32"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/imageButtonValueBlockToolCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_copy"
            android:onClick="onCopyToClipboard"
            android:src="@drawable/copy" />

        <ImageButton
            android:id="@+id/imageButtonValueBlockToolPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_paste"
            android:onClick="onPasteFromClipboard"
            android:src="@drawable/paste" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutValueBlockToolConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutValueBlockToolVB"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/buttonValueBlockToolDecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/arrow_down"
            android:onClick="onDecode"
            android:text="@string/action_decode"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonValueBlockToolEncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/arrow_up"
            android:onClick="onEncode"
            android:text="@string/action_encode"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutValueBlockToolVBasInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutValueBlockToolConvert"
        android:layout_centerHorizontal="true"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textViewValueBlockToolVBasInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/text_vb_as_int"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextValueBlockToolVBasInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_int_423"
            android:imeOptions="actionNext"
            android:inputType="numberSigned"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textViewValueBlockToolAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:text="@string/text_addr"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextValueBlockAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hex_00"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="2"
            android:minEms="2"
            android:importantForAutofill="no" />

    </LinearLayout>

</RelativeLayout>