<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="Activities.MainMenu">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewMainFooter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:orientation="horizontal"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/buttonMainReadTag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/read_tag"
                android:onClick="onShowReadTag"
                android:text="@string/action_read_tag"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonMainWriteTag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/write_tag"
                android:onClick="onShowWriteTag"
                android:text="@string/action_write_tag"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonMainEditCardDump"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/edit_dump"
                android:onClick="onOpenTagDumpEditor"
                android:text="@string/action_edit_tag_dump"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonMainEditKeyDump"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/edit_keys"
                android:onClick="onOpenKeyEditor"
                android:text="@string/action_edit_key_dump"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonMainTools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/tools"
                android:onClick="onShowTools"
                android:text="@string/action_tools"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonMainHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:drawableTop="@drawable/help_and_info"
                android:onClick="onShowHelp"
                android:text="@string/action_help"
                android:background="@drawable/btn_rounded"
                android:padding="16dp"
                android:textAllCaps="false"/>

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewMainFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="4dp"
        android:paddingEnd="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>